# arc-agi-solver

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  arc_agi_solver_kaggle.ipynb  kaggle_pipeline.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
config/model/: policy_net.yaml
config/solver/: search_params.yaml
config/training/: curriculum.yaml
data/: dvc.yaml
src/: main.py
src/core/: dsl.py  grid.py  ir.py  program.py
src/data/: generate_synthetic.py  prepare_data.py
src/inference/: predictor.py  submission.py
src/learning/: dataset.py  models.py  prior.py  trainer.py
src/solver/: constraints.py  portfolio.py  repair.py  search.py  utils.py  verifier.py
src/utils/: logging.py  metrics.py  seed.py  visualization.py
src/validation/: preflight.py
tests/integration/: test_solver.py
tests/property/: test_properties.py
tests/unit/: test_constraints.py  test_dsl.py  test_grid.py
tools/: ensure_spdx.py
